chore: handling merge conflicts
