# server/src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose, { Schema } from 'mongoose'
+import bcrypt from 'bcrypt'
 import passportLocalMongoose from 'passport-local-mongoose';
+import {HookNextFunction} from "../utils/interfaces";
 
 export interface IUser {
   email: string;
@@ -9,6 +11,10 @@ export interface IUser {
 
 // Note: A post request should not contain unneeded parameters
 export interface IUserCreationParams extends IUser {
+  password: string
+}
+
+export interface IUserUpdateParams extends IUser {
   password: string
 }
 
@@ -44,6 +50,35 @@ userSchema.virtual('reverseName').get(function (this: IUserDocument) {
   return `${this.lastName}, ${this.firstName}`
 });
 
-export default mongoose.model('User', userSchema)
+// When the user registers
+userSchema.pre(
+  'save',
+  async function (this: IUserDocument, next: HookNextFunction) {
+    // only hash the password if it has been modified (or is new)
+    if (!this.isModified('password')) {
+      return next()
+    }
 
+    // Random additional data
+    const salt = await bcrypt.genSalt(10)
 
+    this.password = bcrypt.hashSync(this.password, salt)
+
+    return next()
+  }
+)
+
+// Compare a candidate password with the user's password
+userSchema.methods.comparePassword = async function (
+  candidatePassword: string
+): Promise<boolean> {
+  // So we don't have to pass this into the interface method
+  const user = this as IUserDocument
+
+  return bcrypt.compare(candidatePassword, user.password).catch((_err) => false)
+}
+
+export const User = mongoose.model<IUserDocument>('User', userSchema);
+
+// Export the model and return your IUser interface
+export default User;
